// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "height": 12,
      },
    ]
  }
/>
`;

exports[`ProgressBar 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 10,
        "marginTop": 2,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DEE2ED",
          "borderRadius": 2,
          "display": "flex",
          "flex": 1,
          "height": 5,
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#15085E",
            "bottom": 0,
            "display": "flex",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#787D87",
          "display": "flex",
          "fontSize": 12,
          "paddingLeft": 4,
          "textAlign": "right",
        },
      ]
    }
  >
    NaN%
  </Text>
</View>
`;

exports[`ProgressBar 3`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 10,
        "marginTop": 2,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DEE2ED",
          "borderRadius": 2,
          "display": "flex",
          "flex": 1,
          "height": 5,
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#15085E",
            "bottom": 0,
            "display": "flex",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "50%",
          },
        ]
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#787D87",
          "display": "flex",
          "fontSize": 12,
          "paddingLeft": 4,
          "textAlign": "right",
        },
      ]
    }
  >
    50%
  </Text>
</View>
`;

exports[`ProgressBar 4`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 10,
        "marginTop": 2,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DEE2ED",
          "borderRadius": 2,
          "display": "flex",
          "flex": 1,
          "height": 5,
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#48B755",
            "bottom": 0,
            "display": "flex",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#787D87",
          "display": "flex",
          "fontSize": 12,
          "paddingLeft": 4,
          "textAlign": "right",
        },
      ]
    }
  >
    100%
  </Text>
</View>
`;
